fix icon & gap

--- a/output.css
+++ b/output.css
@@ -621,10 +621,6 @@ video {
   left: 0px;
 }
 
-.top-\[180px\] {
-  top: 180px;
-}
-
 .top-0 {
   top: 0px;
 }
@@ -686,6 +682,11 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mx-5 {
+  margin-left: 1.25rem;
+  margin-right: 1.25rem;
+}
+
 .mt-\[51px\] {
   margin-top: 51px;
 }
@@ -730,10 +731,6 @@ video {
   display: none;
 }
 
-.h-full {
-  height: 100%;
-}
-
 .h-\[2px\] {
   height: 2px;
 }
@@ -750,8 +747,8 @@ video {
   height: 2.5rem;
 }
 
-.h-\[1100px\] {
-  height: 1100px;
+.h-\[1000px\] {
+  height: 1000px;
 }
 
 .h-auto {
@@ -764,6 +761,10 @@ video {
 
 .h-\[616px\] {
   height: 616px;
+}
+
+.h-full {
+  height: 100%;
 }
 
 .h-px {
@@ -982,10 +983,6 @@ video {
   cursor: default;
 }
 
-.grid-cols-\[1fr_1fr_auto_1fr_1fr\] {
-  grid-template-columns: 1fr 1fr auto 1fr 1fr;
-}
-
 .grid-cols-\[1fr_auto_1fr\] {
   grid-template-columns: 1fr auto 1fr;
 }
@@ -1082,6 +1079,16 @@ video {
   border-width: 3px;
 }
 
+.border-y {
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+}
+
+.border-x-0 {
+  border-left-width: 0px;
+  border-right-width: 0px;
+}
+
 .border-b-2 {
   border-bottom-width: 2px;
 }
@@ -1117,11 +1124,6 @@ video {
 
 .bg-\[rgba\(2\2c 3\2c 26\2c 0\.4\)\] {
   background-color: rgba(2,3,26,0.4);
-}
-
-.bg-\[\#0E227D\] {
-  --tw-bg-opacity: 1;
-  background-color: rgb(14 34 125 / var(--tw-bg-opacity));
 }
 
 .bg-gradient-to-t {
@@ -1353,10 +1355,6 @@ video {
   opacity: 0.8;
 }
 
-.opacity-90 {
-  opacity: 0.9;
-}
-
 .opacity-30 {
   opacity: 0.3;
 }
@@ -1495,10 +1493,6 @@ video {
     height: 80px;
   }
 
-  .lg\:h-\[1440px\] {
-    height: 1440px;
-  }
-
   .lg\:h-\[unset\] {
     height: unset;
   }
@@ -1519,12 +1513,12 @@ video {
     gap: 33px;
   }
 
-  .lg\:gap-8 {
-    gap: 2rem;
-  }
-
   .lg\:gap-12 {
     gap: 3rem;
+  }
+
+  .lg\:gap-8 {
+    gap: 2rem;
   }
 
   .lg\:self-start {
@@ -1558,16 +1552,12 @@ video {
     padding-left: 4rem;
   }
 
-  .lg\:pb-8 {
-    padding-bottom: 2rem;
+  .lg\:pb-12 {
+    padding-bottom: 3rem;
   }
 
   .lg\:pb-20 {
     padding-bottom: 5rem;
-  }
-
-  .lg\:pb-12 {
-    padding-bottom: 3rem;
   }
 
   .lg\:text-left {
